
2020-05-03  Simon Sobisch <simonsobisch@gnu.org>

	* DEPENDENCIES: new file, moved out of README
	* Makefile.am, gnucobol.spec, HACKING: adjusted for new DEPENDENCIES

2020-04-17  Simon Sobisch <simonsobisch@gnu.org>

	* gnucobol.spec: minor cleanup

2020-04-16  Edward Hart <edward.dan.hart@gmail.com>

	* configure.ac: fixed cleaning of COB_CFLAGS again (see Patches #49).

2020-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: new check for MAKE supporting order-only prerequisites
	  resulting in new conditional MAKE_HAS_PREREQ_ONLY

2020-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: FR #372 new option --with-math to specify multiple
	  precision library used (may have the value gmp or mpir or check);
	  in case of MPIR (or not found GMP) checks for mpir.h (HAVE_MPIR_H)
	  and libmpir; in general: check header first, then library

2020-03-01  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: adjusted generation of built-in COB_LDFLAGS

2020-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: document the existing environment vars LIBCOB_CPPFLAGS,
	  LIBCOB_LIBS and COBC_LIBS and test if those actually work

2019-08-12  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for make

2019-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: changed the manual test runner to be a script handled
	  by autoconf instead of make
	* configure.ac: check for HAVE_MOUSEINTERVAL

2019-06-16  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (tarstamp.h, $(top_distdir)/tarstamp.h): targets added
	* Makefile.am: fixed SUBDIRS handling

2019-06-05  Simon Sobisch <simonsobisch@gnu.org>

	* general: include all (possibly) generated headers by '#include <header>'
	  (search "system directories" [which in all known compilers are pre-fixed
	  with the ones specified with '-I', which is done for the builddir
	  already]) instead of '#include "header"' (which is searched next to the