@@ -889,6 +889,7 @@ AC_LINK_IFELSE([AC_LANG_PROGRAM([[#include <math.h>]],
 #  [])
 
 AC_CHECK_FUNCS([fdatasync sigaction])
+AC_CHECK_DECLS([fdatasync])	# also check for declaration, missing on MacOS...
 
 # Checks for gettext.
 
