@@ -1,4 +1,8 @@
 
+2020-06-10  Simon Sobisch <simonsobisch@gnu.org>
+
+	* fileio.c: define fdatasync if missing (fixing Bug #644 warning on MacOS)
+
 2020-06-09  Simon Sobisch <simonsobisch@gnu.org>
 
 	Bug #616 cannot redirect output of cobcrun --info
